--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
         <div id="title-box">
 
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
+          <p>PHARRELL WILLIAMS</p>
 
           <!-- Level 2 'HAPPY' Header -->
+          <H1>HAPPY</H1>
 
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
+          <P>|FROM DESPICABLE ME|</P>
 
         </div>
       </div>
@@ -22,22 +25,31 @@
       <div id="back" class="album">
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
+        <p>| FROM DESPICABLE ME |</p>
 
         <!-- Level 1 'HAPPY' Header -->
+        <h1>HAPPY</h1>
 
         <!-- Level 3 'WRITTEN BY...' Header -->
+        <P>WRITTEN BY</P>
 
         <!-- pararaph text 'PUBLISHED BY...' -->
+        <P>PUBLISHED BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP) / UNIVERSAL PICTURES MUSIC (ASCAP) | BACKGROUND VOCALS PERFORMED BY RHEA DUMMETT, TREVON HENDERSON, ASHLEY L. LEE, SHAMIKA HIGHTOWER, JASMINE MURRAY AND TERRENCE ROLLE | PRODUCED BY PHARRELL WILLIAMS | RECORDED BY MIKE LARSON FOR I AM OTHER ENTERTAINMENT AT CIRCLE HOUSE STUDIOS, MIAMI, FL | ASSISTED BY MATTHEW DESRAMEAUX | DIGITAL EDITING AND ARRANGEMENT BY ANDREW COLEMAN AND MIKE LARSON FOR I AM OTHER ENTERTAINMENT | MIXED BY LESLIE BRATHWAITE AT MUSIC BOX STUDIOS, ATLANTA, GA.</P>
 
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
+        <P>PHARRELLWILLIAMS.COM</P>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
+        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="Picture of Columbia logo">
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
+        <p>COLUMBIARECORDS.COM</p>
+
 
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
+          <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt="A picture of sony logo">
 
       </div>
     </div>
